Prevent margin collapse at top of page

--- a/src/reset.css
+++ b/src/reset.css
@@ -13,3 +13,13 @@
 
   margin: 0;
 }
+
+html {
+  height: 100%;
+}
+
+body {
+  display: flow-root; /* prevent margin collapse */
+
+  height: 100%;
+}
